Made changes to About Page

--- a/src/components/faqconfig.json
+++ b/src/components/faqconfig.json
@@ -12,7 +12,7 @@
     {
        
         "question": "What committees are being stimulated ?",
-        "answer": "Aippm unhrc unsc uncsw unga who unodc (online) along with IP"
+        "answer": "AIPPM, UNHRC, UNSC, UNCSW, UNGA,  WHO,  UNODC (Online) Along With IP"
     },
     {
        
